- 
    
Bug
 - 
    Resolution: Done
 - 
    
P1: Critical
 - 
    5.0.0 Beta 1, 5.0.0 Beta 2, 5.0.0 RC 1, 5.0.0, 5.3.2
 
- 
        
 - 
        a43684c0da78e7187fd2f4fc05791064174da9de 3b3ecb79a6b61a085445b42253cc90c8e58e1c6c
 
Building Qt 5 using macx-clang-libc++-32 results in the following errors:
styles/qmacstyle_mac.mm:3828:45: error: non-constant-expression cannot be narrowed from type 'qreal' (aka 'double') to 'CGFloat' (aka 'float') in initializer list [-Wc++11-narrowing] CGFloat colorComp[] = { textColor.redF(), textColor.greenF(), ^~~~~~~~~~~~~~~~
Building Qt 5 using macx-clang-32 results in the following errors:
styles/qmacstyle_mac.mm:5021:28: error: no viable conversion from 'NSRect' (aka '_NSRect') to 'CGRect' CGRect rect = [scroller bounds]; ^ ~~~~~~~~~~~~~~~~~ /System/Library/Frameworks/ApplicationServices.framework/Headers/../Frameworks/CoreGraphics.framework/Headers/CGGeometry.h:29:8: note: candidate constructor (the implicit copy constructor) not viable: no known conversion from 'NSRect' (aka '_NSRect') to 'const CGRect &' for 1st argument; struct CGRect { ^
Similar to this bug https://bugreports.qt-project.org/browse/QTBUG-28828
- is duplicated by
 - 
                    
QTBUG-41367 Qt-5.3.2 build from source error for 32 bit MacOSX platform
-         
     - Closed
 
 -         
 - 
                    
QTBUG-41654 5.3.2 doesn't compile on 32-bit mac
-         
 - Closed
 
 -